fix(DLB/front): modal de retiros mantenia los z-index anteriores

--- a/front/src/components/Franja/Franja.css
+++ b/front/src/components/Franja/Franja.css
@@ -17,6 +17,6 @@
   font-weight: 600;
   background-color: #CF1348;
   padding-left: 90px;
-  z-index: 11;
+  /* z-index: 11; */
   /* border: 1px solid white; */
 }
