--- a/front/src/components/Home/Home.css
+++ b/front/src/components/Home/Home.css
@@ -21,7 +21,7 @@
     background-size: cover;
   }
 
-.Welcome {
+/* .Welcome {
     z-index: 11;
 }
 .Description {
@@ -35,4 +35,4 @@
 }
 .Footer {
     z-index: 11;
-}
+} */
