--- a/front/src/components/Navbar/Navbar.css
+++ b/front/src/components/Navbar/Navbar.css
@@ -248,6 +248,3 @@
   background-color: #cf1348;
 }
 
-.Navbar {
-  z-index: 22;
-}
